--- a/docs/notebooks/demo_v1_0_5.ipynb
+++ b/docs/notebooks/demo_v1_0_5.ipynb
@@ -2,11 +2,18 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Demo Notebook"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "dVY-MEQMfBKx"
       },
       "source": [
-        "### Package Installation"
+        "## Package Installation"
       ]
     },
     {
@@ -60,7 +67,7 @@
         "id": "e1i24s_Ugx4o"
       },
       "source": [
-        "### Google Credentials"
+        "## Google Credentials"
       ]
     },
     {
@@ -164,7 +171,7 @@
         "id": "OG5YBx0CdSYx"
       },
       "source": [
-        "### Spreadsheet Service"
+        "## Spreadsheet Service"
       ]
     },
     {
@@ -283,7 +290,7 @@
         "id": "zGcO45SgdWy6"
       },
       "source": [
-        "### Binding the Model"
+        "## Binding the Base Model"
       ]
     },
     {
@@ -314,7 +321,7 @@
         "id": "ZAMpwfwZdb-U"
       },
       "source": [
-        "### Model Class"
+        "## Defining Child Model Classes"
       ]
     },
     {
@@ -347,7 +354,7 @@
         "id": "9L_sHhcsdfzX"
       },
       "source": [
-        "### Queries"
+        "## Queries"
       ]
     },
     {
