--- a/docs/notebooks/demo_v1_0_5.ipynb
+++ b/docs/notebooks/demo_v1_0_5.ipynb
@@ -9,6 +9,24 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/drive/19hMHayokPtpJkLgCsWXZLV3FsGF7gvU6?usp=sharing\">\n",
+        "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "This is a Google Colab notebook that showcases various features of the `gspread-models` package.\n",
+        "\n",
+        "In this demo, we take advantage of the simplified Google authentication process within Colab to obtain credentials for the logged in user (instead of using a service account credentials JSON file)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "dVY-MEQMfBKx"
       },
