--- a/docs/notebooks/demo_v1_0_5.ipynb
+++ b/docs/notebooks/demo_v1_0_5.ipynb
@@ -2,11 +2,36 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Demo Notebook"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/drive/19hMHayokPtpJkLgCsWXZLV3FsGF7gvU6?usp=sharing\">\n",
+        "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "This is a Google Colab notebook that showcases various features of the `gspread-models` package.\n",
+        "\n",
+        "In this demo, we take advantage of the simplified Google authentication process within Colab to obtain credentials for the logged in user (instead of using a service account credentials JSON file)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "dVY-MEQMfBKx"
       },
       "source": [
-        "### Package Installation"
+        "## Package Installation"
       ]
     },
     {
@@ -60,7 +85,7 @@
         "id": "e1i24s_Ugx4o"
       },
       "source": [
-        "### Google Credentials"
+        "## Google Credentials"
       ]
     },
     {
@@ -164,7 +189,7 @@
         "id": "OG5YBx0CdSYx"
       },
       "source": [
-        "### Spreadsheet Service"
+        "## Spreadsheet Service"
       ]
     },
     {
@@ -283,7 +308,7 @@
         "id": "zGcO45SgdWy6"
       },
       "source": [
-        "### Binding the Model"
+        "## Binding the Base Model"
       ]
     },
     {
@@ -314,7 +339,7 @@
         "id": "ZAMpwfwZdb-U"
       },
       "source": [
-        "### Model Class"
+        "## Defining Child Model Classes"
       ]
     },
     {
@@ -347,7 +372,7 @@
         "id": "9L_sHhcsdfzX"
       },
       "source": [
-        "### Queries"
+        "## Queries"
       ]
     },
     {
