--- a/docs/notebooks/demo_v1_0_6.ipynb
+++ b/docs/notebooks/demo_v1_0_6.ipynb
@@ -121,6 +121,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Asks you to login via google account:"
+      ],
+      "metadata": {
+        "id": "0pFarxnbJskv"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 8,
       "metadata": {
@@ -132,6 +141,15 @@
         "\n",
         "auth.authenticate_user()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Gets credentials for the logged in user:"
+      ],
+      "metadata": {
+        "id": "zM0SZ0moJ38d"
+      }
     },
     {
       "cell_type": "code",
@@ -1092,13 +1110,27 @@
         "            return [cls(record) for record in records]\n",
         "\n",
         "\n",
-        "MyBaseModel.service = service"
+        "#MyBaseModel.service = service\n",
+        "MyBaseModel.bind(credentials=creds, document_id=GOOGLE_SHEETS_DOCUMENT_ID)"
       ],
       "metadata": {
-        "id": "IzTC3pJfTqtQ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IzTC3pJfTqtQ",
+        "outputId": "548e9742-8056-4781-ebe3-c0feea0bf642"
       },
-      "execution_count": 24,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "SPREADSHEET SERVICE...\n",
+            "DOCUMENT ID: 1Nk-UBd-3TyWZqbWSvKIIF-S_KKdrkVFRVeNrFy_F1gs\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1121,7 +1153,7 @@
       "metadata": {
         "id": "i7yBjzcWTP5Y"
       },
-      "execution_count": 25,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -1136,9 +1168,9 @@
           "height": 255
         },
         "id": "W82SswmAQC5R",
-        "outputId": "68dae613-7ab4-4c31-9140-fb524247551d"
+        "outputId": "775d0a71-8e98-4f2a-ea88-a296071d8c47"
       },
-      "execution_count": 26,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -1161,15 +1193,15 @@
               "\n",
               "                         created_at  \n",
               "id                                   \n",
-              "1  2024-05-23 00:31:09.352598+00:00  \n",
-              "2  2024-05-23 00:31:09.353662+00:00  \n",
-              "3  2024-05-23 00:31:09.353691+00:00  \n",
-              "4  2024-05-23 00:31:09.353712+00:00  \n",
-              "5  2024-05-23 00:31:09.353748+00:00  "
+              "1  2024-05-23 01:09:02.799792+00:00  \n",
+              "2  2024-05-23 01:09:02.799862+00:00  \n",
+              "3  2024-05-23 01:09:02.799887+00:00  \n",
+              "4  2024-05-23 01:09:02.799907+00:00  \n",
+              "5  2024-05-23 01:09:02.799925+00:00  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-03d27bcb-aa8f-4e8e-87c0-8dcd8c291553\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a9c408bb-e4ee-4056-a778-b24badbefaa9\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1210,7 +1242,7 @@
               "      <td>To Kill a Mockingbird</td>\n",
               "      <td>Harper Lee</td>\n",
               "      <td>1960</td>\n",
-              "      <td>2024-05-23 00:31:09.352598+00:00</td>\n",
+              "      <td>2024-05-23 01:09:02.799792+00:00</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -1218,7 +1250,7 @@
               "      <td>1984</td>\n",
               "      <td>George Orwell</td>\n",
               "      <td>1949</td>\n",
-              "      <td>2024-05-23 00:31:09.353662+00:00</td>\n",
+              "      <td>2024-05-23 01:09:02.799862+00:00</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -1226,7 +1258,7 @@
               "      <td>The Great Gatsby</td>\n",
               "      <td>F. Scott Fitzgerald</td>\n",
               "      <td>1925</td>\n",
-              "      <td>2024-05-23 00:31:09.353691+00:00</td>\n",
+              "      <td>2024-05-23 01:09:02.799887+00:00</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -1234,7 +1266,7 @@
               "      <td>The Catcher in the Rye</td>\n",
               "      <td>J.D. Salinger</td>\n",
               "      <td>1951</td>\n",
-              "      <td>2024-05-23 00:31:09.353712+00:00</td>\n",
+              "      <td>2024-05-23 01:09:02.799907+00:00</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
@@ -1242,7 +1274,7 @@
               "      <td>Pride and Prejudice</td>\n",
               "      <td>Jane Austen</td>\n",
               "      <td>1813</td>\n",
-              "      <td>2024-05-23 00:31:09.353748+00:00</td>\n",
+              "      <td>2024-05-23 01:09:02.799925+00:00</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -1250,7 +1282,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-03d27bcb-aa8f-4e8e-87c0-8dcd8c291553')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a9c408bb-e4ee-4056-a778-b24badbefaa9')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1302,12 +1334,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-03d27bcb-aa8f-4e8e-87c0-8dcd8c291553 button.colab-df-convert');\n",
+              "        document.querySelector('#df-a9c408bb-e4ee-4056-a778-b24badbefaa9 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-03d27bcb-aa8f-4e8e-87c0-8dcd8c291553');\n",
+              "        const element = document.querySelector('#df-a9c408bb-e4ee-4056-a778-b24badbefaa9');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1327,8 +1359,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-2550fd84-5aac-446e-a7b3-a696acacbab5\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2550fd84-5aac-446e-a7b3-a696acacbab5')\"\n",
+              "<div id=\"df-e87eb1c4-1b74-48bf-a196-d32dde3db596\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e87eb1c4-1b74-48bf-a196-d32dde3db596')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1447,7 +1479,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-2550fd84-5aac-446e-a7b3-a696acacbab5 button');\n",
+              "        document.querySelector('#df-e87eb1c4-1b74-48bf-a196-d32dde3db596 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1464,7 +1496,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 30
         }
       ]
     }
